tests/baselines/reference/classExpression.errors.txt
classExpression.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== classExpression.ts (1 errors) ====
    var x = class C {
    }
    
    var y = {
        foo: class C2 {
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var z = class C4 {
        }
    }